// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Events should matchSnapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Events
    activeUser={
      Object {
        "created_at": "2018-10-24T23:37:44.724Z",
        "email": "pykim0591@gmail.com",
        "first_name": "Paul",
        "gid": "117977763637801404146",
        "id": 3,
        "last_name": "K",
        "updated_at": "2018-10-24T23:37:44.724Z",
      }
    }
    addToWatchList={[MockFunction]}
    events={
      Array [
        Object {
          "address": "1000 Chopper Circle Denver, CO 80204",
          "date": "Mon, Apr 1, 2019 7:30 PM",
          "distance": 0.75,
          "e_id": "G5vzZ4amDV3z0",
          "favorite": false,
          "img": "https://s1.ticketm.net/dam/a/1dd/d5e86d93-5e1a-49d9-b530-70fefc0f21dd_877061_RETINA_PORTRAIT_3_2.jpg",
          "lat": "39.74724",
          "lng": "-105.010166",
          "name": "P!NK: BEAUTIFUL TRAUMA WORLD TOUR",
          "url": "https://www.altitudetickets.com/events/detail/pink-2019",
          "venue_name": "Pepsi Center",
        },
        Object {
          "address": "1000 Chopper Circle Denver, CO 80204",
          "date": "Tue, Dec 4, 2018 7:30 PM",
          "distance": 0.75,
          "e_id": "G5vzZ4aV5O3CO",
          "favorite": true,
          "img": "https://s1.ticketm.net/dam/a/7d9/44a96192-d246-4946-b6b4-c1f7f975a7d9_816871_TABLET_LANDSCAPE_3_2.jpg",
          "lat": "39.74724",
          "lng": "-105.010166",
          "name": "Childish Gambino",
          "url": "https://www.altitudetickets.com/events/detail/childish-gambino",
          "venue_name": "Pepsi Center",
        },
      ]
    }
    removeFromWatchlist={[MockFunction]}
    setWatchEvent={[MockFunction]}
    watchList={
      Array [
        Object {
          "address": "1000 Chopper Circle Denver, CO 80204",
          "date": "Mon, Apr 1, 2019 7:30 PM",
          "distance": 0.75,
          "e_id": "G5vzZ4amDV3z0",
          "favorite": false,
          "img": "https://s1.ticketm.net/dam/a/1dd/d5e86d93-5e1a-49d9-b530-70fefc0f21dd_877061_RETINA_PORTRAIT_3_2.jpg",
          "lat": "39.74724",
          "lng": "-105.010166",
          "name": "P!NK: BEAUTIFUL TRAUMA WORLD TOUR",
          "url": "https://www.altitudetickets.com/events/detail/pink-2019",
          "venue_name": "Pepsi Center",
        },
        Object {
          "address": "1000 Chopper Circle Denver, CO 80204",
          "date": "Tue, Dec 4, 2018 7:30 PM",
          "distance": 0.75,
          "e_id": "G5vzZ4aV5O3CO",
          "favorite": true,
          "img": "https://s1.ticketm.net/dam/a/7d9/44a96192-d246-4946-b6b4-c1f7f975a7d9_816871_TABLET_LANDSCAPE_3_2.jpg",
          "lat": "39.74724",
          "lng": "-105.010166",
          "name": "Childish Gambino",
          "url": "https://www.altitudetickets.com/events/detail/childish-gambino",
          "venue_name": "Pepsi Center",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        Array [
          <Unknown
            anchor="bottom"
            coordinates={
              Array [
                "-105.010166",
                "39.74724",
              ]
            }
          >
            <i
              class="fas fa-map-pin"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            />
          </Unknown>,
          <Unknown
            anchor="bottom"
            coordinates={
              Array [
                "-105.010166",
                "39.74724",
              ]
            }
          >
            <i
              class="fas fa-map-pin"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            />
          </Unknown>,
        ],
        false,
        <Connect(EventTab)
          closePopup={[Function]}
          handleModalClick={[Function]}
          showEventInfo={[Function]}
        />,
        <Modal
          animationDuration={500}
          blockScroll={true}
          center={true}
          classNames={Object {}}
          classes={
            Object {
              "closeButton": "styles_closeButton__20ID4",
              "closeIcon": "styles_closeIcon__1QwbI",
              "modal": "styles_modal__gNwvD",
              "overlay": "styles_overlay__CLSq-",
              "overlayCenter": "styles_overlayCenter__YHoO7",
              "transitionEnter": "styles_transitionEnter__3j_-a",
              "transitionEnterActive": "styles_transitionEnterActive___eQs7",
              "transitionExit": "styles_transitionExit__1KmEf",
              "transitionExitActive": "styles_transitionExitActive__1nQXw",
            }
          }
          closeIconSize={28}
          closeIconSvgPath={
            <path
              d="M28.5 9.62L26.38 7.5 18 15.88 9.62 7.5 7.5 9.62 15.88 18 7.5 26.38l2.12 2.12L18 20.12l8.38 8.38 2.12-2.12L20.12 18z"
            />
          }
          closeOnEsc={true}
          closeOnOverlayClick={true}
          onClose={[Function]}
          onEntered={null}
          onEscKeyDown={null}
          onExited={null}
          onOverlayClick={null}
          open={false}
          showCloseIcon={true}
          styles={Object {}}
        >
          <EventModal
            handleFavoriteClick={[Function]}
            handleHover={[Function]}
            hoverMessage=""
            targetEvent={Object {}}
          />
        </Modal>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "event-0",
        "nodeType": "function",
        "props": Object {
          "anchor": "bottom",
          "children": <i
            class="fas fa-map-pin"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          />,
          "coordinates": Array [
            "-105.010166",
            "39.74724",
          ],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "class": "fas fa-map-pin",
            "onClick": [Function],
            "onMouseEnter": [Function],
            "onMouseLeave": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": "i",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "event-1",
        "nodeType": "function",
        "props": Object {
          "anchor": "bottom",
          "children": <i
            class="fas fa-map-pin"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          />,
          "coordinates": Array [
            "-105.010166",
            "39.74724",
          ],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "class": "fas fa-map-pin",
            "onClick": [Function],
            "onMouseEnter": [Function],
            "onMouseLeave": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": "i",
        },
        "type": [Function],
      },
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "closePopup": [Function],
          "handleModalClick": [Function],
          "showEventInfo": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "animationDuration": 500,
          "blockScroll": true,
          "center": true,
          "children": <EventModal
            handleFavoriteClick={[Function]}
            handleHover={[Function]}
            hoverMessage=""
            targetEvent={Object {}}
          />,
          "classNames": Object {},
          "classes": Object {
            "closeButton": "styles_closeButton__20ID4",
            "closeIcon": "styles_closeIcon__1QwbI",
            "modal": "styles_modal__gNwvD",
            "overlay": "styles_overlay__CLSq-",
            "overlayCenter": "styles_overlayCenter__YHoO7",
            "transitionEnter": "styles_transitionEnter__3j_-a",
            "transitionEnterActive": "styles_transitionEnterActive___eQs7",
            "transitionExit": "styles_transitionExit__1KmEf",
            "transitionExitActive": "styles_transitionExitActive__1nQXw",
          },
          "closeIconSize": 28,
          "closeIconSvgPath": <path
            d="M28.5 9.62L26.38 7.5 18 15.88 9.62 7.5 7.5 9.62 15.88 18 7.5 26.38l2.12 2.12L18 20.12l8.38 8.38 2.12-2.12L20.12 18z"
          />,
          "closeOnEsc": true,
          "closeOnOverlayClick": true,
          "onClose": [Function],
          "onEntered": null,
          "onEscKeyDown": null,
          "onExited": null,
          "onOverlayClick": null,
          "open": false,
          "showCloseIcon": true,
          "styles": Object {},
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "handleFavoriteClick": [Function],
            "handleHover": [Function],
            "hoverMessage": "",
            "targetEvent": Object {},
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          Array [
            <Unknown
              anchor="bottom"
              coordinates={
                Array [
                  "-105.010166",
                  "39.74724",
                ]
              }
            >
              <i
                class="fas fa-map-pin"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              />
            </Unknown>,
            <Unknown
              anchor="bottom"
              coordinates={
                Array [
                  "-105.010166",
                  "39.74724",
                ]
              }
            >
              <i
                class="fas fa-map-pin"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              />
            </Unknown>,
          ],
          false,
          <Connect(EventTab)
            closePopup={[Function]}
            handleModalClick={[Function]}
            showEventInfo={[Function]}
          />,
          <Modal
            animationDuration={500}
            blockScroll={true}
            center={true}
            classNames={Object {}}
            classes={
              Object {
                "closeButton": "styles_closeButton__20ID4",
                "closeIcon": "styles_closeIcon__1QwbI",
                "modal": "styles_modal__gNwvD",
                "overlay": "styles_overlay__CLSq-",
                "overlayCenter": "styles_overlayCenter__YHoO7",
                "transitionEnter": "styles_transitionEnter__3j_-a",
                "transitionEnterActive": "styles_transitionEnterActive___eQs7",
                "transitionExit": "styles_transitionExit__1KmEf",
                "transitionExitActive": "styles_transitionExitActive__1nQXw",
              }
            }
            closeIconSize={28}
            closeIconSvgPath={
              <path
                d="M28.5 9.62L26.38 7.5 18 15.88 9.62 7.5 7.5 9.62 15.88 18 7.5 26.38l2.12 2.12L18 20.12l8.38 8.38 2.12-2.12L20.12 18z"
              />
            }
            closeOnEsc={true}
            closeOnOverlayClick={true}
            onClose={[Function]}
            onEntered={null}
            onEscKeyDown={null}
            onExited={null}
            onOverlayClick={null}
            open={false}
            showCloseIcon={true}
            styles={Object {}}
          >
            <EventModal
              handleFavoriteClick={[Function]}
              handleHover={[Function]}
              hoverMessage=""
              targetEvent={Object {}}
            />
          </Modal>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "event-0",
          "nodeType": "function",
          "props": Object {
            "anchor": "bottom",
            "children": <i
              class="fas fa-map-pin"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            />,
            "coordinates": Array [
              "-105.010166",
              "39.74724",
            ],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "class": "fas fa-map-pin",
              "onClick": [Function],
              "onMouseEnter": [Function],
              "onMouseLeave": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": "i",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "event-1",
          "nodeType": "function",
          "props": Object {
            "anchor": "bottom",
            "children": <i
              class="fas fa-map-pin"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            />,
            "coordinates": Array [
              "-105.010166",
              "39.74724",
            ],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "class": "fas fa-map-pin",
              "onClick": [Function],
              "onMouseEnter": [Function],
              "onMouseLeave": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": "i",
          },
          "type": [Function],
        },
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "closePopup": [Function],
            "handleModalClick": [Function],
            "showEventInfo": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "animationDuration": 500,
            "blockScroll": true,
            "center": true,
            "children": <EventModal
              handleFavoriteClick={[Function]}
              handleHover={[Function]}
              hoverMessage=""
              targetEvent={Object {}}
            />,
            "classNames": Object {},
            "classes": Object {
              "closeButton": "styles_closeButton__20ID4",
              "closeIcon": "styles_closeIcon__1QwbI",
              "modal": "styles_modal__gNwvD",
              "overlay": "styles_overlay__CLSq-",
              "overlayCenter": "styles_overlayCenter__YHoO7",
              "transitionEnter": "styles_transitionEnter__3j_-a",
              "transitionEnterActive": "styles_transitionEnterActive___eQs7",
              "transitionExit": "styles_transitionExit__1KmEf",
              "transitionExitActive": "styles_transitionExitActive__1nQXw",
            },
            "closeIconSize": 28,
            "closeIconSvgPath": <path
              d="M28.5 9.62L26.38 7.5 18 15.88 9.62 7.5 7.5 9.62 15.88 18 7.5 26.38l2.12 2.12L18 20.12l8.38 8.38 2.12-2.12L20.12 18z"
            />,
            "closeOnEsc": true,
            "closeOnOverlayClick": true,
            "onClose": [Function],
            "onEntered": null,
            "onEscKeyDown": null,
            "onExited": null,
            "onOverlayClick": null,
            "open": false,
            "showCloseIcon": true,
            "styles": Object {},
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "handleFavoriteClick": [Function],
              "handleHover": [Function],
              "hoverMessage": "",
              "targetEvent": Object {},
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Events should matchSnapshot when displayPopup is true 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Events
    activeUser={
      Object {
        "created_at": "2018-10-24T23:37:44.724Z",
        "email": "pykim0591@gmail.com",
        "first_name": "Paul",
        "gid": "117977763637801404146",
        "id": 3,
        "last_name": "K",
        "updated_at": "2018-10-24T23:37:44.724Z",
      }
    }
    addToWatchList={[MockFunction]}
    events={
      Array [
        Object {
          "address": "1000 Chopper Circle Denver, CO 80204",
          "date": "Mon, Apr 1, 2019 7:30 PM",
          "distance": 0.75,
          "e_id": "G5vzZ4amDV3z0",
          "favorite": false,
          "img": "https://s1.ticketm.net/dam/a/1dd/d5e86d93-5e1a-49d9-b530-70fefc0f21dd_877061_RETINA_PORTRAIT_3_2.jpg",
          "lat": "39.74724",
          "lng": "-105.010166",
          "name": "P!NK: BEAUTIFUL TRAUMA WORLD TOUR",
          "url": "https://www.altitudetickets.com/events/detail/pink-2019",
          "venue_name": "Pepsi Center",
        },
        Object {
          "address": "1000 Chopper Circle Denver, CO 80204",
          "date": "Tue, Dec 4, 2018 7:30 PM",
          "distance": 0.75,
          "e_id": "G5vzZ4aV5O3CO",
          "favorite": true,
          "img": "https://s1.ticketm.net/dam/a/7d9/44a96192-d246-4946-b6b4-c1f7f975a7d9_816871_TABLET_LANDSCAPE_3_2.jpg",
          "lat": "39.74724",
          "lng": "-105.010166",
          "name": "Childish Gambino",
          "url": "https://www.altitudetickets.com/events/detail/childish-gambino",
          "venue_name": "Pepsi Center",
        },
      ]
    }
    removeFromWatchlist={[MockFunction]}
    setWatchEvent={[MockFunction]}
    watchList={
      Array [
        Object {
          "address": "1000 Chopper Circle Denver, CO 80204",
          "date": "Mon, Apr 1, 2019 7:30 PM",
          "distance": 0.75,
          "e_id": "G5vzZ4amDV3z0",
          "favorite": false,
          "img": "https://s1.ticketm.net/dam/a/1dd/d5e86d93-5e1a-49d9-b530-70fefc0f21dd_877061_RETINA_PORTRAIT_3_2.jpg",
          "lat": "39.74724",
          "lng": "-105.010166",
          "name": "P!NK: BEAUTIFUL TRAUMA WORLD TOUR",
          "url": "https://www.altitudetickets.com/events/detail/pink-2019",
          "venue_name": "Pepsi Center",
        },
        Object {
          "address": "1000 Chopper Circle Denver, CO 80204",
          "date": "Tue, Dec 4, 2018 7:30 PM",
          "distance": 0.75,
          "e_id": "G5vzZ4aV5O3CO",
          "favorite": true,
          "img": "https://s1.ticketm.net/dam/a/7d9/44a96192-d246-4946-b6b4-c1f7f975a7d9_816871_TABLET_LANDSCAPE_3_2.jpg",
          "lat": "39.74724",
          "lng": "-105.010166",
          "name": "Childish Gambino",
          "url": "https://www.altitudetickets.com/events/detail/childish-gambino",
          "venue_name": "Pepsi Center",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        Array [
          <Unknown
            anchor="bottom"
            coordinates={
              Array [
                "-105.010166",
                "39.74724",
              ]
            }
          >
            <i
              class="fas fa-map-pin"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            />
          </Unknown>,
          <Unknown
            anchor="bottom"
            coordinates={
              Array [
                "-105.010166",
                "39.74724",
              ]
            }
          >
            <i
              class="fas fa-map-pin"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            />
          </Unknown>,
        ],
        <EventPopup
          targetEvent={Object {}}
        />,
        <Connect(EventTab)
          closePopup={[Function]}
          handleModalClick={[Function]}
          showEventInfo={[Function]}
        />,
        <Modal
          animationDuration={500}
          blockScroll={true}
          center={true}
          classNames={Object {}}
          classes={
            Object {
              "closeButton": "styles_closeButton__20ID4",
              "closeIcon": "styles_closeIcon__1QwbI",
              "modal": "styles_modal__gNwvD",
              "overlay": "styles_overlay__CLSq-",
              "overlayCenter": "styles_overlayCenter__YHoO7",
              "transitionEnter": "styles_transitionEnter__3j_-a",
              "transitionEnterActive": "styles_transitionEnterActive___eQs7",
              "transitionExit": "styles_transitionExit__1KmEf",
              "transitionExitActive": "styles_transitionExitActive__1nQXw",
            }
          }
          closeIconSize={28}
          closeIconSvgPath={
            <path
              d="M28.5 9.62L26.38 7.5 18 15.88 9.62 7.5 7.5 9.62 15.88 18 7.5 26.38l2.12 2.12L18 20.12l8.38 8.38 2.12-2.12L20.12 18z"
            />
          }
          closeOnEsc={true}
          closeOnOverlayClick={true}
          onClose={[Function]}
          onEntered={null}
          onEscKeyDown={null}
          onExited={null}
          onOverlayClick={null}
          open={false}
          showCloseIcon={true}
          styles={Object {}}
        >
          <EventModal
            handleFavoriteClick={[Function]}
            handleHover={[Function]}
            hoverMessage=""
            targetEvent={Object {}}
          />
        </Modal>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "event-0",
        "nodeType": "function",
        "props": Object {
          "anchor": "bottom",
          "children": <i
            class="fas fa-map-pin"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          />,
          "coordinates": Array [
            "-105.010166",
            "39.74724",
          ],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "class": "fas fa-map-pin",
            "onClick": [Function],
            "onMouseEnter": [Function],
            "onMouseLeave": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": "i",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "event-1",
        "nodeType": "function",
        "props": Object {
          "anchor": "bottom",
          "children": <i
            class="fas fa-map-pin"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          />,
          "coordinates": Array [
            "-105.010166",
            "39.74724",
          ],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "class": "fas fa-map-pin",
            "onClick": [Function],
            "onMouseEnter": [Function],
            "onMouseLeave": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": "i",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "targetEvent": Object {},
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "closePopup": [Function],
          "handleModalClick": [Function],
          "showEventInfo": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "animationDuration": 500,
          "blockScroll": true,
          "center": true,
          "children": <EventModal
            handleFavoriteClick={[Function]}
            handleHover={[Function]}
            hoverMessage=""
            targetEvent={Object {}}
          />,
          "classNames": Object {},
          "classes": Object {
            "closeButton": "styles_closeButton__20ID4",
            "closeIcon": "styles_closeIcon__1QwbI",
            "modal": "styles_modal__gNwvD",
            "overlay": "styles_overlay__CLSq-",
            "overlayCenter": "styles_overlayCenter__YHoO7",
            "transitionEnter": "styles_transitionEnter__3j_-a",
            "transitionEnterActive": "styles_transitionEnterActive___eQs7",
            "transitionExit": "styles_transitionExit__1KmEf",
            "transitionExitActive": "styles_transitionExitActive__1nQXw",
          },
          "closeIconSize": 28,
          "closeIconSvgPath": <path
            d="M28.5 9.62L26.38 7.5 18 15.88 9.62 7.5 7.5 9.62 15.88 18 7.5 26.38l2.12 2.12L18 20.12l8.38 8.38 2.12-2.12L20.12 18z"
          />,
          "closeOnEsc": true,
          "closeOnOverlayClick": true,
          "onClose": [Function],
          "onEntered": null,
          "onEscKeyDown": null,
          "onExited": null,
          "onOverlayClick": null,
          "open": false,
          "showCloseIcon": true,
          "styles": Object {},
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "handleFavoriteClick": [Function],
            "handleHover": [Function],
            "hoverMessage": "",
            "targetEvent": Object {},
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          Array [
            <Unknown
              anchor="bottom"
              coordinates={
                Array [
                  "-105.010166",
                  "39.74724",
                ]
              }
            >
              <i
                class="fas fa-map-pin"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              />
            </Unknown>,
            <Unknown
              anchor="bottom"
              coordinates={
                Array [
                  "-105.010166",
                  "39.74724",
                ]
              }
            >
              <i
                class="fas fa-map-pin"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              />
            </Unknown>,
          ],
          <EventPopup
            targetEvent={Object {}}
          />,
          <Connect(EventTab)
            closePopup={[Function]}
            handleModalClick={[Function]}
            showEventInfo={[Function]}
          />,
          <Modal
            animationDuration={500}
            blockScroll={true}
            center={true}
            classNames={Object {}}
            classes={
              Object {
                "closeButton": "styles_closeButton__20ID4",
                "closeIcon": "styles_closeIcon__1QwbI",
                "modal": "styles_modal__gNwvD",
                "overlay": "styles_overlay__CLSq-",
                "overlayCenter": "styles_overlayCenter__YHoO7",
                "transitionEnter": "styles_transitionEnter__3j_-a",
                "transitionEnterActive": "styles_transitionEnterActive___eQs7",
                "transitionExit": "styles_transitionExit__1KmEf",
                "transitionExitActive": "styles_transitionExitActive__1nQXw",
              }
            }
            closeIconSize={28}
            closeIconSvgPath={
              <path
                d="M28.5 9.62L26.38 7.5 18 15.88 9.62 7.5 7.5 9.62 15.88 18 7.5 26.38l2.12 2.12L18 20.12l8.38 8.38 2.12-2.12L20.12 18z"
              />
            }
            closeOnEsc={true}
            closeOnOverlayClick={true}
            onClose={[Function]}
            onEntered={null}
            onEscKeyDown={null}
            onExited={null}
            onOverlayClick={null}
            open={false}
            showCloseIcon={true}
            styles={Object {}}
          >
            <EventModal
              handleFavoriteClick={[Function]}
              handleHover={[Function]}
              hoverMessage=""
              targetEvent={Object {}}
            />
          </Modal>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "event-0",
          "nodeType": "function",
          "props": Object {
            "anchor": "bottom",
            "children": <i
              class="fas fa-map-pin"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            />,
            "coordinates": Array [
              "-105.010166",
              "39.74724",
            ],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "class": "fas fa-map-pin",
              "onClick": [Function],
              "onMouseEnter": [Function],
              "onMouseLeave": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": "i",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "event-1",
          "nodeType": "function",
          "props": Object {
            "anchor": "bottom",
            "children": <i
              class="fas fa-map-pin"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            />,
            "coordinates": Array [
              "-105.010166",
              "39.74724",
            ],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "class": "fas fa-map-pin",
              "onClick": [Function],
              "onMouseEnter": [Function],
              "onMouseLeave": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": "i",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "targetEvent": Object {},
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "closePopup": [Function],
            "handleModalClick": [Function],
            "showEventInfo": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "animationDuration": 500,
            "blockScroll": true,
            "center": true,
            "children": <EventModal
              handleFavoriteClick={[Function]}
              handleHover={[Function]}
              hoverMessage=""
              targetEvent={Object {}}
            />,
            "classNames": Object {},
            "classes": Object {
              "closeButton": "styles_closeButton__20ID4",
              "closeIcon": "styles_closeIcon__1QwbI",
              "modal": "styles_modal__gNwvD",
              "overlay": "styles_overlay__CLSq-",
              "overlayCenter": "styles_overlayCenter__YHoO7",
              "transitionEnter": "styles_transitionEnter__3j_-a",
              "transitionEnterActive": "styles_transitionEnterActive___eQs7",
              "transitionExit": "styles_transitionExit__1KmEf",
              "transitionExitActive": "styles_transitionExitActive__1nQXw",
            },
            "closeIconSize": 28,
            "closeIconSvgPath": <path
              d="M28.5 9.62L26.38 7.5 18 15.88 9.62 7.5 7.5 9.62 15.88 18 7.5 26.38l2.12 2.12L18 20.12l8.38 8.38 2.12-2.12L20.12 18z"
            />,
            "closeOnEsc": true,
            "closeOnOverlayClick": true,
            "onClose": [Function],
            "onEntered": null,
            "onEscKeyDown": null,
            "onExited": null,
            "onOverlayClick": null,
            "open": false,
            "showCloseIcon": true,
            "styles": Object {},
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "handleFavoriteClick": [Function],
              "handleHover": [Function],
              "hoverMessage": "",
              "targetEvent": Object {},
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
